crates/jni-macros/tests/ui/native_method/fail/raw_shorthand_wrong_return_type.stderr
error[E0308]: mismatched types
  --> tests/ui/native_method/fail/raw_shorthand_wrong_return_type.rs:19:19
   |
19 |       let _method = native_method! {
   |  ___________________^
20 | |         raw fn MyClass::myMethod() -> jint,
21 | |         fn = my_method_impl
22 | |     };
   | |     ^
   | |     |
   | |_____expected `i32`, found `i64`
   |       expected `i32` because of return type
   |
   = note: this error originates in the macro `native_method` (in Nightly builds, run with -Z macro-backtrace for more info)
help: you can convert an `i64` to an `i32` and panic if the converted value doesn't fit
   |
22 |     }.try_into().unwrap();
   |      ++++++++++++++++++++
